Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY

{{$NEXT}}
    * Bump MinimumPerl version to scan only perl files
    * Add Clean plugin to run clean automatically after release

0.017     2011-04-19
    * Use goo.gl for URL shortening

0.016     2011-04-17
    * Update Github plugins
    * Remove TestingMania version prerequisite
    * Remove Repository/Bugtracker (covered by Github::Meta)

0.015     2011-04-02
    * Add support for specifying the changelog filename

0.014     2011-02-18
    * Attempt to use Git::Commit and Git::Push properly
    * Use OurPkgVersion instead of PkgVersion - much better
    * Require 0.0017 for ROKR's plugins - bugfixes

0.012     2011-02-06
    * Require D::Z::PB::TestingMania 0.003 for a better dep tree & PodLinkTests
    * Add CopyMakefilePLFromBuild

0.011     2011-01-24
    * Use new name for Pod::Weaver pluginbundle

0.010     2011-01-24
    * Renamed to Dist::Zilla::PluginBundle::Author::DOHERTY
    * Added support for using SurgicalPodWeaver via surgical in dist.ini
    * Bumped minimum version of InstallRelease to hopefully detect failed installs

0.009     2011-01-23
    * Handle the case where it is a fake release
    * Use is.gd to shorten URL for Twitter

0.008     2011-01-18
    * Fixed spurious warning
    * Require support for p3rl.org in GithubUpdate

0.007     2011-01-18
    * Fixed undef plugin error when no_twitter is set
    * Allow README to be dirty when releasing (again?)

0.006     2011-01-18
    * Tweet releases
    * Update github information on release
    * Relicensed under the same terms as Perl 5

0.005     2011-01-11
    * Re-upload properly - no changes since 0.004

0.004     2011-01-11
    * Avoid circular depenencies in Dist::Zilla::PluginBundle::ROKR (which provides CopyReadmeFromBuild)
    * Add Dist::Zilla::Plugin::CheckExtraTests dependency, which provides the xtest command in addition to the plugin itself
    * Fix Git::Commit so it really commits