@@ -5,4 +5,4 @@ copyright_holder    = Mike Doherty
 copyright_year      = 2010
 
 [@Author::DOHERTY]
-no_twitter = 1
+twitter = 0
